--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,24 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>All Pay</title>
+	<meta charset="UTF-8">
+  	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+  	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
+  	<script src="js/libs/angular-md5.js"></script>
+  	<script type="text/javascript">
+  		angular.module('appPayApp',['angular-md5'])
+  		.controller('mainCtrl',['$scope','$filter','md5',function($scope,$filter,md5){
+  			var AllPayModel = function(){
+  				var self = this;
+  				self.MerchantID = '2000132';
+  				self.MerchantTradeNo = 'testtest1112';
+  				self.MerchantTradeDate = '2015/02/25 01:14:00';
+  				self.PaymentType = 'aio';
+  				self.TotalAmount = '888';
+  				self.TradeDesc = 'testtest';
+  				self.ItemName = 'Servives1m';
+  				self.ReturnURL = 'http://localhost:8080/';
+  				self.ChoosePayment = 'WebATM';
+  			};
+  			
+  			$scope.model = new AllPayModel();
+  			$scope.CheckMacValue = '';
+  			$scope.genCheckMacValue = function(){
+  				var keySet = [];
+  				var tmpHashString = '';
+  				angular.forEach($scope.model, function(value, key) {
+  				  console.log(key + ': ' + value);
+  				  keySet.push(key);
+  				});
+  				keySet = $filter('orderBy')(keySet);
+  				tmpHashString += 'HashKey=5294y06JbISpM5x9&';
+  				angular.forEach(keySet, function(value){
+  					tmpHashString += value + '=' + $scope.model[value] +'&'
+  				});
+  				tmpHashString += 'HashIV=v77hoKGq4kWxNNIS';
+  				tmpHashString = angular.lowercase(encodeURIComponent(tmpHashString)).replace('%20','+');
+				console.log(tmpHashString);
+				var result = md5.createHash(tmpHashString);
+				console.log(result);
+				$scope.CheckMacValue = angular.uppercase(result);
+			};
+  		}]);
+  	</script>
+	<title>All Pay</title>
 </head>
-<body>
+<body ng-app="appPayApp">
 	<h1>Hi All Pay</h1>
-	<form action="http://payment-stage.allpay.com.tw/Cashier/AioCheckOut" method="post">
-		<input type="hidden" name="MerchantID" value="2000132" />
-		<input type="hidden" name="MerchantTradeNo" value="testtest1111" />
-		<input type="hidden" name="MerchantTradeDate" value="2015/02/23 23:44:00" />
-		<input type="hidden" name="PaymentType" value="aio" />
-		<input type="hidden" name="TotalAmount" value="888" />
-		<input type="hidden" name="TradeDesc" value="testtest" />
-		<input type="hidden" name="ItemName" value="Servives1m" />
-		<input type="hidden" name="ReturnURL" value="http://localhost:8080/" />
-		<input type="hidden" name="ChoosePayment" value="WebATM" />
-		<input type="hidden" name="CheckMacValue" value="62219C3FC24F88C0AC41A6CC6C54DBEB" />
-		
-		<input type="submit" value="send" />
-	</form>
+	<div ng-controller="mainCtrl">
+		<form action="http://payment-stage.allpay.com.tw/Cashier/AioCheckOut" method="post">
+			<input type="text" ng-hide="true" ng-model="model.MerchantID" name="MerchantID" /><br/>
+			<input type="text" ng-model="model.MerchantTradeNo" name="MerchantTradeNo"  /><br/>
+			<input type="text" ng-model="model.MerchantTradeDate" name="MerchantTradeDate" /><br/>
+			<input type="text" ng-model="model.PaymentType" name="PaymentType" /><br/>
+			金額 : <input type="text" ng-model="model.TotalAmount" name="TotalAmount" /><br/>
+			描述 : <input type="text" ng-model="model.TradeDesc" name="TradeDesc" /><br/>
+			商品 : <input type="text" ng-model="model.ItemName" name="ItemName" /><br/>
+			<input type="text" ng-model="model.ReturnURL" name="ReturnURL" /><br/>
+			<input type="text" ng-model="model.ChoosePayment" name="ChoosePayment" /><br/>
+			<input type="text" ng-model="CheckMacValue" name="CheckMacValue" /><br/>
+			<input type="button" ng-click="genCheckMacValue()" value="驗證碼" /><br/>
+			<input type="submit" value="send" />
+		</form>
+	</div>
 </body>
 </html>
